# astra-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: assert.hpp  time.hpp  type.hpp
include/ecs/component/: component_manager.hpp  component_storage.hpp  component_type.hpp  i_component_storage.hpp
include/ecs/entity/: entity.hpp  entity_manager.hpp
include/ecs/system/: system.hpp  system_manager.hpp
include/input/: input.hpp  keyboard.hpp  mouse.hpp
include/math/: color.hpp  geometry.hpp  vec2.hpp
include/platform/: window.hpp
include/render/: draw.hpp  framebuffer.hpp
include/renderer/: color.hpp  framebuffer.hpp
src/core/: time.cpp
src/ecs/component/: component_manager.cpp
src/ecs/entity/: entity_manager.cpp
src/ecs/system/: system_manager.cpp
src/input/: input.cpp  keyboard.cpp  mouse.cpp
src/math/: color.cpp  geometry.cpp  vec2.cpp
src/platform/: window.cpp
src/render/: draw.cpp  framebuffer.cpp
src/renderer/: color.cpp  framebuffer.cpp
